syntax = "proto3";

package proto;

option go_package = "./pb";

import "google/protobuf/empty.proto";

service DriverTransfer {
  rpc FileUpload (UploadRequest) returns (google.protobuf.Empty);
  rpc FileDownloadPath (DownloadPathRequest) returns (DownloadResponse);
  rpc FileDownloadHash (DownloadHashRequest) returns (DownloadResponse);
}

message UploadRequest {
  string name = 1;
  string directory = 2;
  bytes content = 3;
  bytes attribute = 4;
}

message DownloadPathRequest {
  string path = 1;
}

message DownloadHashRequest {
  string hash = 3;
}

message DownloadResponse {
  string directory = 1;
  string name = 2;
  bytes content = 3;
}
